<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/main_background"

    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/black_blue"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_edittext"

            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_databse"
                android:textAlignment="center"
                android:textColor="@color/teal_LIGHT"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Sign_Up_email"
                android:layout_width="300sp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/emailSignUp"
                android:textColorHint="@color/teal_darkish"
                android:padding="8dp"
                android:textColor="@color/teal_LIGHT"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/Sign_Up_pass"
                android:layout_width="300sp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/passwordSignUp"
                android:textColorHint="@color/teal_darkish"
                android:padding="8dp"
                android:textColor="@color/teal_LIGHT"
                android:autofillHints="password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/teal_LIGHT"
                android:text="@string/sign_up_database"
                android:textColor="@color/teaL_DARK"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:clickable="true"
            android:focusable="true" />

            <TextView
                android:id="@+id/SignIn_RedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:text="@string/already_a_user_sign_in"
                android:textColor="@color/teal_LIGHT"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>